Creating another endpoint for others users profiles and completing DOC
